k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-api-sample
  labels:
    app: k8s-api-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-api-sample
  template:
    metadata:
      labels:
        app: k8s-api-sample
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: k8s-api-sample
        image: 503561449641.dkr.ecr.ap-northeast-1.amazonaws.com/k8s-api-sample:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
